src/test/ui/type/type-check/unknown_type_for_closure.stderr
error[E0282]: type annotations needed
  --> $DIR/unknown_type_for_closure.rs:2:14
   |
LL |     let x = |_| {    };
   |              ^ consider giving this closure parameter a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
